<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.pageFragments.AddAppointmentFragment">

        <com.github.sundeepk.compactcalendarview.CompactCalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:compactCalendarCurrentDayBackgroundColor="#FF6A1F"
            app:compactCalendarCurrentDayTextColor="#fff"
            app:compactCalendarTextSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

        <EditText
            android:id="@+id/appointmentTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="Appointment Title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <EditText
            android:id="@+id/appointmentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"

            android:hint="Enter appointment details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appointmentTitleEditText" />


        <Button
            android:id="@+id/selectTimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:elevation="6dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="Select Time"
            android:backgroundTint="#cc5519"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appointmentEditText" />


        <Button
            android:id="@+id/addAppointmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="6dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="Request Appointment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectTimeButton">

            <EditText
                android:id="@+id/appointmentDurationEditText"
                android:layout_width="197dp"
                android:layout_height="48dp"
                android:hint="Appointment Duration"
                android:inputType="number"
                app:layout_constraintWidth_percent="0.7" />

            <Spinner
                android:id="@+id/unitSpinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="409dp"
            android:layout_height="57dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/scrollLeftButton"
                android:layout_width="81dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="left button"
                android:src="@drawable/arrow_circle_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/monthTextView"
                android:layout_width="132dp"
                android:layout_height="23dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="Month"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/scrollLeftButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yearTextView"
                android:layout_width="107dp"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="Year"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/scrollRightButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/scrollRightButton"
                android:layout_width="81dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/arrow_circle_right_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

