<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/modify_appointment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/appointment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/modify_appointment_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/appointment_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_appointment_title" />

    <EditText
        android:id="@+id/modify_appointment_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/appointment_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_appointment_details" />

    <EditText
        android:id="@+id/modify_appointment_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/appointment_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_appointment_date" />

    <Button
        android:id="@+id/update_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modify_appointment_time" />

</androidx.constraintlayout.widget.ConstraintLayout>

