<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/action_page2"
        android:icon="@drawable/icon_req"
        android:title="Request" />
    <item
        android:id="@+id/action_page1"
        android:icon="@drawable/icon_home"
        android:title="Home" />
    <item
        android:id="@+id/action_page3"
        android:icon="@drawable/icon_today"
        android:title="Today" />
    <item
        android:id="@+id/action_none"
        android:title=""
        android:icon="@android:color/transparent"
        android:visible="false" />
<!--    <item-->
<!--        android:id="@+id/action_page4"-->
<!--        android:icon="@drawable/ic_page2"-->
<!--        android:title="@string/page4" />-->
</menu>
