<resources>
    <string name="app_name">SwiftSlotz</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="incoming_requests_appointment">Incoming Requests</string>
    <string name="edit_appointment">Edit</string>
    <string name="leave_appointment">Leave</string>
    <string name="appointment_options">Appointment Options</string>
    <string name="appointment_title">Enter New Title Here</string>
    <string name="appointment_date">Enter New Date Here</string>
    <string name="appointment_time">Enter New Time Here</string>
    <string name="appointment_details">Enter New Detail Here</string>
...
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="approve_appointment">Approve_Appointment\n</string>
    <string name="reject_appointment">Reject_Appointment\n</string>
    <item name="action_set_constraints" type="id" />
    <item name="action_delete" type="id" />
    <item name="action_edit" type="id" />
    <string-array name="units_array">
        <item>Minute</item>
        <item>Hour</item>
    </string-array>
    <string-array name="usability_array">
        <item>Very Hard</item>
...
